2nd commit. Fixed the sizing for the rows

--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
             <div>
                 <h3>LinkedIn</h3>
             </div>
+            <div>
+                <h3>Twitter</h3>
+            </div>
+            <div>
+                <h3>Instagram</h3>
+            </div>
         </div>
        
     
